# DZ3

CMakeProject1/: CMakeLists.txt  main.cpp
CMakeProject1/inoutlib/include/: inout.h
CMakeProject1/inoutlib/src/: print.cpp  read.cpp
